--- a/branches/Azathoth/Docs/src/manual.texi
+++ b/branches/Azathoth/Docs/src/manual.texi
@@ -252,17 +252,17 @@ You can create overlays either through the SceneManager::createOverlay method, o
 
 @heading Creating 2D Elements
 
-The GuiElement class abstracts the details of 2D elements which are added to overlays. All items which can be added to overlays are derived from this class. It is possible (and encouraged) for users of OGRE to define their own custom subclasses of GuiElement in order to provide their own user controls. The key common features of all GuiElements are things like size, position, basic material name etc. Subclasses extend this behaviour to include more complex properties and behaviour.@*@*
+The OverlayElement class abstracts the details of 2D elements which are added to overlays. All items which can be added to overlays are derived from this class. It is possible (and encouraged) for users of OGRE to define their own custom subclasses of OverlayElement in order to provide their own user controls. The key common features of all OverlayElements are things like size, position, basic material name etc. Subclasses extend this behaviour to include more complex properties and behaviour.@*@*
 
-An important built-in subclass of GuiElement is GuiContainer. GuiContainer is the same as a GuiElement, except that it can contain other GuiElements, grouping them together (allowing them to be moved together for example) and providing them with a local coordinate origin for easier lineup.@*@*
+An important built-in subclass of OverlayElement is OverlayContainer. OverlayContainer is the same as a OverlayElement, except that it can contain other OverlayElements, grouping them together (allowing them to be moved together for example) and providing them with a local coordinate origin for easier lineup.@*@*
 
-The third important class is GuiManager. Whenever an application wishes to create a 2D element to add to an overlay (or a container), it should call GuiManager::createGuiElement. The type of element you wish to create is identified by a string, the reason being that it allows plugins to register new types of GuiElement for you to create without you having to link specifically to those libraries. For example, to create a panel (a plain rectangular area which can contain other GuiElements) you would call GuiManager::getSingleton().createGuiElement("Panel", "myNewPanel");@*@*
+The third important class is GuiManager. Whenever an application wishes to create a 2D element to add to an overlay (or a container), it should call GuiManager::createOverlayElement. The type of element you wish to create is identified by a string, the reason being that it allows plugins to register new types of OverlayElement for you to create without you having to link specifically to those libraries. For example, to create a panel (a plain rectangular area which can contain other OverlayElements) you would call GuiManager::getSingleton().createOverlayElement("Panel", "myNewPanel");@*@*
 
 @heading Adding 2D Elements to the Overlay
 
-Only GuiContainers can be added direct to an overlay. The reason is that each level of container establishes the Zorder of the elements contained within it, so if you nest several containers, inner containers have a higher zorder than outer ones to ensure they are displayed correctly. To add a container (such as a Panel) to the overlay, simply call Overlay::add2D.@*@*
+Only OverlayContainers can be added direct to an overlay. The reason is that each level of container establishes the Zorder of the elements contained within it, so if you nest several containers, inner containers have a higher zorder than outer ones to ensure they are displayed correctly. To add a container (such as a Panel) to the overlay, simply call Overlay::add2D.@*@*
 
-If you wish to add child elements to that container, call GuiContainer::addChild. Child elements can be GuiElements or GuiContainer instances themselves. Remember that the position of a child element is relative to the top-left corner of it's parent.@*@*
+If you wish to add child elements to that container, call OverlayContainer::addChild. Child elements can be OverlayElements or OverlayContainer instances themselves. Remember that the position of a child element is relative to the top-left corner of it's parent.@*@*
 
 @heading A word about 2D coordinates
 
@@ -280,7 +280,7 @@ Another nice feature of overlays is being able to rotate, scroll and scale them 
 
 @heading Input And Overlays
 
-Many uses for overlays naturally lend themselves to user input, such as menu screens. There are a number of built-in GuiElements which accept event-based input and these are demonstrated in the Gui demo which comes with OGRE. @xref{Event-based Gui Features} for more details.
+Many uses for overlays naturally lend themselves to user input, such as menu screens. There are a number of built-in OverlayElements which accept event-based input and these are demonstrated in the Gui demo which comes with OGRE. @xref{Event-based Gui Features} for more details.
 
 @heading Scripting overlays
 Overlays can also be defined in scripts. @xref{Overlay Scripts} for details.
@@ -913,9 +913,9 @@ Format1 (short): cubic_texture <base_name> <combinedUVW|separateUV>@*@*
 
 The base_name in this format is something like 'skybox.jpg', and the system will expect you to provide skybox_fr.jpg, skybox_bk.jpg, skybox_up.jpg, skybox_dn.jpg, skybox_lf.jpg, and skybox_rt.jpg for the individual faces.@*@*
 
-Format2 (long): cubic_texture <front> <back> <left> <right> <up> <down> <combinedUVW|separateUV>@*@*
+Format2 (long): cubic_texture <front> <back> <left> <right> <up> <down> separateUV@*@*
 
-In this case each face is specified explicitly, incase you don't want to conform to the image naming standards above.@*@*
+In this case each face is specified explicitly, incase you don't want to conform to the image naming standards above. You can only use this for the separateUV version since the combinedUVW version requires a single texture name to be assigned to the combined 3D texture (see below).@*@*
 
 In both cases the final parameter means the following:
 @table @asis
@@ -2202,7 +2202,7 @@ affector ColourImage
 @node Overlay Scripts
 @section Overlay Scripts
 
-Overlay scripts offer you the ability to define overlays in a script which can be reused easily. Whilst you could set up all overlays for a scene in code using the methods of the SceneManager, Overlay and GuiElement classes, in practice it's a bit unwieldy. Instead you can store overlay definitions in text files which can then be loaded whenever required.@*@*
+Overlay scripts offer you the ability to define overlays in a script which can be reused easily. Whilst you could set up all overlays for a scene in code using the methods of the SceneManager, Overlay and OverlayElement classes, in practice it's a bit unwieldy. Instead you can store overlay definitions in text files which can then be loaded whenever required.@*@*
 
 @heading Loading scripts
 
@@ -2217,7 +2217,7 @@ MyOverlays/ANewOverlay
 {
     zorder 200
 
-    container Panel(MyGuiElements/TestPanel)
+    container Panel(MyOverlayElements/TestPanel)
     {
         // Center it horzontally, put it at the top
         left 0.25
@@ -2227,7 +2227,7 @@ MyOverlays/ANewOverlay
         material MyMaterials/APanelMaterial
 
         // Another panel nested in this one
-        container Panel(MyGuiElements/AnotherPanel)
+        container Panel(MyOverlayElements/AnotherPanel)
         {
              left 0
              top 0
@@ -2266,9 +2266,9 @@ These are delimited by curly braces. The format for the header preceding the fir
 { ...@*@*
 @table @asis
 @item type_name
-Must resolve to the name of a GuiElement type which has been registered with the GuiManager. Plugins register with the GuiManager to advertise their ability to create elements, and at this time advertise the name of the type. OGRE comes preconfigured with types 'Panel', 'BorderPanel' and 'TextArea'.
+Must resolve to the name of a OverlayElement type which has been registered with the GuiManager. Plugins register with the GuiManager to advertise their ability to create elements, and at this time advertise the name of the type. OGRE comes preconfigured with types 'Panel', 'BorderPanel' and 'TextArea'.
 @item instance_name
-Must be a name unique among all other elements / containers by which to identify the element. Note that you can obtain a pointer to any named element by calling GuiManager::getSingleton().getGuiElement(name).
+Must be a name unique among all other elements / containers by which to identify the element. Note that you can obtain a pointer to any named element by calling GuiManager::getSingleton().getOverlayElement(name).
 @item template_name
 Optional template on which to base this item. See templates.
 @end table
@@ -2397,10 +2397,10 @@ The above example uses templates to define a button. Note that the button templa
 
 Also note that the instantiate of a Button needs a template name for the caption attribute. So templates can also be used by elements that need dynamic creation of children elements (the button creates a TextAreaElement in this case for its caption).@*@*
 
-@xref{GuiElement Attributes}, @ref{Standard GuiElements}
+@xref{OverlayElement Attributes}, @ref{Standard OverlayElements}
 
-@node GuiElement Attributes
-@subsection GuiElement Attributes
+@node OverlayElement Attributes
+@subsection OverlayElement Attributes
 
 These attributes are valid within the braces of a 'container' or 'element' block in an overlay script. They must each be on their own line. Ordering is unimportant.@*@*
 
@@ -2517,15 +2517,20 @@ Not all elements support captions, so each element is free to disregard this if 
 Default: blank@*
 
 
+@anchor{rotation}
+@subheading rotation
+
+Sets the rotation of the element.@*@*
+
 Format: rotation <angle_in_degrees> <axis_x> <axis_y> <axis_z>
 Example: rotation 30 0 0 1
 
 Default: none 
 
-@node Standard GuiElements
-@subsection Standard GuiElements
+@node Standard OverlayElements
+@subsection Standard OverlayElements
 
-Although OGRE's GuiElement and GuiContainer classes are designed to be extended by applications developers, there are a few elements which come as standard with Ogre. These include:
+Although OGRE's OverlayElement and OverlayContainer classes are designed to be extended by applications developers, there are a few elements which come as standard with Ogre. These include:
 @itemize @bullet
 @item
 @ref{Panel}
@@ -2606,7 +2611,7 @@ The name of the back panel template (e.g. a @ref{BorderPanel}) to be used as the
 @node Font Definition Scripts
 @section Font Definition Scripts
 
-Ogre uses texture-based fonts to render the TextAreaGuiElement. You can also use the Font object for your own purpose if you wish. The final form of a font is a Material object generated by the font, and a set of 'glyph' (character) texture coordinate information.@*@*
+Ogre uses texture-based fonts to render the TextAreaOverlayElement. You can also use the Font object for your own purpose if you wish. The final form of a font is a Material object generated by the font, and a set of 'glyph' (character) texture coordinate information.@*@*
 
 There are 2 ways you can get a font into OGRE:
 @enumerate
@@ -2656,7 +2661,7 @@ The size at which to generate the font, in standard points. Note this only affec
 @item resolution <dpi>
 The resolution in dots per inch, this is used in conjunction with the point size to determine the final size. 72 / 96 dpi is normal.
 @item antialias_colour <true|false>
-This is an optional flag, which defaults to 'false'. The generator will antialias the font by default using the alpha component of the texture, which will look fine if you use alpha blending to render your text (this is the default assumed by TextAreaGuiElement for example). If, however you wish to use a colour based blend like add or modulate in your own code, you should set this to 'true' so the colour values are anitaliased too. If you set this to true and use alpha blending, you'll find the edges of your font are antialiased too quickly resulting in a 'thin' look to your fonts, because not only is the alpha blending the edges, the colour is fading too. Leave this option at the default if in doubt.
+This is an optional flag, which defaults to 'false'. The generator will antialias the font by default using the alpha component of the texture, which will look fine if you use alpha blending to render your text (this is the default assumed by TextAreaOverlayElement for example). If, however you wish to use a colour based blend like add or modulate in your own code, you should set this to 'true' so the colour values are anitaliased too. If you set this to true and use alpha blending, you'll find the edges of your font are antialiased too quickly resulting in a 'thin' look to your fonts, because not only is the alpha blending the edges, the colour is fading too. Leave this option at the default if in doubt.
 @end table
 @*@*
 You can also create new fonts at runtime by using the FontManager if you wish.
